syntax = "proto3";

package google;

option java_package = "ru.madbrains.mad_pay_android";

message GoogleParameters {
  string gateway_name = 1;
  string gateway_merchant_id = 2;
  string merchant_name = 3;
  string merchant_id = 4;
  CardParameters card_parameters = 5;
  TransactionInfo transaction_info = 6;
  bool email_required = 7;
  bool shipping_address_required = 8;
  ShippingAddressParameters shipping_address_parameters = 9;
}

message CardParameters {
  repeated CardAuthMethods allowed_cards_methods = 1;
  bool allow_prepaid_cards = 2;
  bool allow_credit_cards = 3;
  bool assurance_details_required = 4;
  bool billing_address_required = 5;
  BillingAddressParameters billing_address_parameters = 6;
}

enum CardAuthMethods {
  PAN_ONLY = 0;
  CRYPTOGRAM_3DS = 1;
}

message BillingAddressParameters {
  BillingFormat billing_format = 1;
  bool phone_number_required = 2;
}

enum BillingFormat {
  MIN = 0;
  FULL = 1;
}

message TransactionInfo {
  string transaction_id = 1;
  TotalPriceStatus total_price_status = 2;
  string total_price_label = 4;
  CheckoutOption checkout_option = 5;
}

enum TotalPriceStatus {
  FINAL = 0;
  ESTIMATED = 1;
  NOT_CURRENTLY_KNOWN = 2;
}

enum CheckoutOption {
  DEFAULT = 0;
  COMPLETE_IMMEDIATE_PURCHASE = 1;
}

message ShippingAddressParameters {
  repeated string allowed_country_codes = 1;
  bool phone_number_required = 2;
}