syntax = "proto3";

import "apple.proto";
import "google.proto";

option java_package = "ru.madbrains.mad_pay_android";

enum PaymentEnvironment {
  TEST = 0;
  PRODUCTION = 1;
}

enum PaymentNetwork {
  VISA = 0;
  MASTERCARD = 1;
  AMEX = 2;
  INTERAC = 3;
  DISCOVER = 4;
  JCB = 5;
  MAESTRO = 6;
  ELECTRON = 7;
  MIR = 8;
  CARTESBANCARRIES = 9;
  UNIONPAY = 10;
  EFTPOS = 11;
  ELO = 12;
  IDCREDIT = 13;
  MADA = 14;
  PRIVATELABEL = 15;
  QUICPAY = 16;
  SUICA = 17;
  VPAY = 18;
  DANKORT = 19;
  NANACO = 21;
  WAON = 22;
  GIROCARD = 23;
  BARCODE = 24;
}

message PaymentItem {
  string name = 1;
  double price = 2;
}

message PaymentRequest {
  oneof parameters {
    google.GoogleParameters google = 1;
    apple.AppleParameters apple = 2;
  }
  string currency_code = 3;
  string country_code = 4;
  repeated PaymentNetwork allowed_payment_networks = 5;
  repeated PaymentItem payment_items = 6;
}

message EnvironmentRequest {
  PaymentEnvironment environment = 1;
}

message CheckActiveCardRequest {
  repeated PaymentNetwork allowed_payment_networks = 1;
}

message Response {
  bool success = 1;
  string error_code = 2;
  string message = 3;
  bytes data = 4;
}